<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tekst1"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/voted_yes_x"
        android:layout_weight="3"
        android:textColor="@color/green"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tekst2"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/voted_no_x"
        android:textColor="@color/red"
        android:layout_weight="3"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tekst3"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/voted_abstain_x"
        android:textColor="@color/yellow"
        android:layout_weight="3"
    />



</LinearLayout>